<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5DC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:width="360dp"
        android:height="40dp"
        android:background="#A52A2A"
        android:gravity="center"
        android:text="@string/tytul"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/throwDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:width="360dp"
        android:height="20dp"
        android:text="@string/throwDice"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285">

        <ImageView
            android:id="@+id/dice1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/emptydice"
            android:layout_margin="9dp"
            android:width="60dp"
            android:height="60dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/emptyDice" />

        <ImageView
            android:id="@+id/dice2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/emptydice"
            android:layout_margin="9dp"
            android:width="60dp"
            android:height="60dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/emptyDice" />

        <ImageView
            android:id="@+id/dice3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/emptydice"
            android:layout_margin="9dp"
            android:width="60dp"
            android:height="60dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/emptyDice" />

        <ImageView
            android:id="@+id/dice4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/emptydice"
            android:layout_margin="9dp"
            android:width="60dp"
            android:height="60dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/emptyDice" />

        <ImageView
            android:id="@+id/dice5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/emptydice"
            android:layout_margin="9dp"
            android:width="60dp"
            android:height="60dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/emptyDice" />
    </LinearLayout>

    <TextView
        android:id="@+id/thisRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thisRoll"
        app:layout_constraintBottom_toTopOf="@+id/allRolls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <TextView
        android:id="@+id/allRolls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allRolls"
        app:layout_constraintBottom_toTopOf="@+id/rollCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <TextView
        android:id="@+id/rollCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollcount"
        app:layout_constraintBottom_toTopOf="@+id/resetDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/resetDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:width="360dp"
        android:height="20dp"
        android:text="@string/resetDice"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

</androidx.constraintlayout.widget.ConstraintLayout>